--- a/editor/templates/manage.html
+++ b/editor/templates/manage.html
@@ -69,7 +69,7 @@
                 <ul class="pagination">
                     {% if "previous" in feedbacks.pagination %}
                         <li><a class="btn btn-default" type="button"
-                               href="{% add_get_parameter feedbacks_page=feedbacks.pagination.previous,selected='feedbacks' %}">Previous</a>
+                               href="{% add_get_parameter feedbacks_page=feedbacks.pagination.previous,selected='feedbacks' %}">&laquo;</a>
                         </li>
                     {% endif %}
                     <li class="active">
@@ -77,7 +77,7 @@
                     </li>
                     {% if "next" in feedbacks.pagination %}
                         <li><a class="btn btn-default" type="button"
-                               href="{% add_get_parameter feedbacks_page=feedbacks.pagination.next,selected='feedbacks' %}">Next</a>
+                               href="{% add_get_parameter feedbacks_page=feedbacks.pagination.next,selected='feedbacks' %}">&raquo;</a>
                         </li>
                     {% endif %}
                 </ul>
@@ -122,7 +122,7 @@
                     <ul class="pagination">
                         {% if "previous" in my_deals.pagination %}
                             <li><a class="btn btn-default" type="button"
-                                   href="{% add_get_parameter my_deals_page=my_deals.pagination.previous,selected='my_deals' %}">Previous</a>
+                                   href="{% add_get_parameter my_deals_page=my_deals.pagination.previous,selected='my_deals' %}">&laquo;</a>
                             </li>
                         {% endif %}
                         <li class="active">
@@ -130,7 +130,7 @@
                         </li>
                         {% if "next" in my_deals.pagination %}
                             <li><a class="btn btn-default" type="button"
-                                   href="{% add_get_parameter my_deals_page=my_deals.pagination.next,selected='my_deals' %}">Next</a>
+                                   href="{% add_get_parameter my_deals_page=my_deals.pagination.next,selected='my_deals' %}">&raquo;</a>
                             </li>
                         {% endif %}
                     </ul>
@@ -231,7 +231,7 @@
                     <ul class="pagination">
                         {% if "previous" in deletes.pagination %}
                             <li><a class="btn btn-default" type="button"
-                                   href="{% add_get_parameter deletes_page=deletes.pagination.previous,selected='deletions' %}">Previous</a>
+                                   href="{% add_get_parameter deletes_page=deletes.pagination.previous,selected='deletions' %}">&laquo;</a>
                             </li>
                         {% endif %}
                         <li class="active">
@@ -239,7 +239,7 @@
                         </li>
                         {% if "next" in deletes.pagination %}
                             <li><a class="btn btn-default" type="button"
-                                   href="{% add_get_parameter deletes_page=deletes.pagination.next,selected='deletions' %}">Next</a>
+                                   href="{% add_get_parameter deletes_page=deletes.pagination.next,selected='deletions' %}">&raquo;</a>
                             </li>
                         {% endif %}
                     </ul>
@@ -283,7 +283,7 @@
                     <ul class="pagination">
                         {% if "previous" in inserts.pagination %}
                             <li><a class="btn btn-default" type="button"
-                                   href="{% add_get_parameter inserts_page=inserts.pagination.previous,selected='inserts' %}">Previous</a>
+                                   href="{% add_get_parameter inserts_page=inserts.pagination.previous,selected='inserts' %}">&laquo;</a>
                             </li>
                         {% endif %}
                         <li class="active">
@@ -291,7 +291,7 @@
                         </li>
                         {% if "next" in inserts.pagination %}
                             <li><a class="btn btn-default" type="button"
-                                   href="{% add_get_parameter inserts_page=inserts.pagination.next,selected='inserts' %}">Next</a>
+                                   href="{% add_get_parameter inserts_page=inserts.pagination.next,selected='inserts' %}">&raquo;</a>
                             </li>
                         {% endif %}
                     </ul>
@@ -336,7 +336,7 @@
                     <ul class="pagination">
                         {% if "previous" in sh_deletes.pagination %}
                             <li><a type="button" class="btn btn-default"
-                                   href="{% add_get_parameter deletes_page=sh_deletes.pagination.previous,selected='deletions' %}">Previous</a>
+                                   href="{% add_get_parameter deletes_page=sh_deletes.pagination.previous,selected='deletions' %}">&laquo;</a>
                             </li>
                         {% endif %}
                         <li class="active">
@@ -345,7 +345,7 @@
                         </li>
                         {% if "next" in sh_deletes.pagination %}
                             <li><a type="button" class="btn btn-default"
-                                   href="{% add_get_parameter deletes_page=sh_deletes.pagination.next,selected='deletions' %}">Next</a>
+                                   href="{% add_get_parameter deletes_page=sh_deletes.pagination.next,selected='deletions' %}">&raquo;</a>
                             </li>
                         {% endif %}
                     </ul>
