--- a/grid/templates/deal-detail.html
+++ b/grid/templates/deal-detail.html
@@ -167,7 +167,7 @@
 
     {% else %}
 
-        <p>{% trans "There are currently no deals matching your search criteria." %} <a href="/public/">{% trans "Add a deal" %}</a>.</p>
+        <p>{% trans "There are currently no deals matching your search criteria." %} <a href="/deal/add">{% trans "Add a deal" %}</a>.</p>
 
     {% endif %}
 
