--- a/map/templates/map/map.html
+++ b/map/templates/map/map.html
@@ -40,7 +40,7 @@
     {% include "filters.html" %}
     <div id="alert_placeholder"></div>
 
-    <div id="map" class="map" title='All Deals'></div>
+    <div id="map" class="map" title='{% trans "All Deals" %}'></div>
 
     <script>
     </script>
