--- a/templates/filters.html
+++ b/templates/filters.html
@@ -74,16 +74,16 @@
                 <div class="col-md-6 filterbox">
                     <div class="input-group condition">
                         <select class="operator select-inline" value="Contains">
-                            <option>Contains not</option>
-                            <option>Equals</option>
-                            <option>Equals not</option>
-                            <option>Starts with</option>
-                            <option>Ends with</option>
+                            <option>{% trans "Contains not" %}</option>
+                            <option>{% trans "Equals" %}</option>
+                            <option>{% trans "Equals not" %}</option>
+                            <option>{% trans "Starts with" %}</option>
+                            <option>{% trans "Ends with" %}</option>
                         </select>
                         <input class="field" type="text" value="" class="inline">
                     </div>
                     <div class="input-group">
-                        <button class="btn btn-default"><i class="lm lm-plus"></i> Add condition</button>
+                        <button class="btn btn-default"><i class="lm lm-plus"></i> {% trans "Add condition" %}</button>
                     </div>
                 </div>
             </div>
