--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -15,10 +15,9 @@
 
 {% if next %}
     {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
+    <p>{% trans "Your account doesn't have access to this page. To proceed, please login with an account that has access." %}</p>
     {% else %}
-    <p>Please login to see this page.</p>
+    <p>{% trans "Please login to see this page." %}</p>
     {% endif %}
 {% endif %}
 
@@ -40,6 +39,6 @@
 </form>
 
 {# Assumes you setup the password_reset view in your URLconf #}
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+<p><a href="{% url 'password_reset' %}">{% trans "Lost password?" %}</a></p>
 
 {% endblock %}
